# moviemanager

./: .flake8  .gitignore  README.md  docker-compose.yaml  requirements.txt
backend/: .gitignore  Dockerfile  config.yaml  logging.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/mm/: __init__.py  config.py  crud.py  database.py  main.py  models.py  recreate.py  schemas.py  util.py
backend/moviemanager/: __init__.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  rebuild.py  relink.py  schemas.py  util.py
backend/moviemanager/routes/: __init__.py  actors.py  categories.py  movie_actor.py  movie_actors.py  movie_categories.py  movie_category.py  movies.py  root.py  series.py  studios.py
backend/moviemanager/tests/: test_crud.py  test_package.py
backend/moviemanager/tests/data/: init.sql
frontend/: .env  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx  msw.ts  test-utils.tsx
frontend/src/components/: ActorList.tsx  ActorSelector.tsx  ActorSelectorList.tsx  AdminAddForm.tsx  AdminImportMovies.tsx  CategoryList.tsx  CategorySelector.tsx  ClipEditorForm.tsx  ClipList.tsx  Container.tsx  Loading.tsx  MetadataEditor.tsx  MovieData.tsx  MovieDataForm.tsx  MovieDataFormRow.tsx  MovieImportButton.tsx  MovieList.tsx  MoviePropertyForm.tsx  MoviePropertyFormSelector.tsx  MovieSection.tsx  NavBar.tsx  NavButton.tsx  NavLink.tsx  Navbar.tsx  SectionHeader.tsx
frontend/src/msw/: defaults.ts  server.ts
(+29 files in other folders)
